--- a/input-pattern.html
+++ b/input-pattern.html
@@ -66,8 +66,8 @@
             type="[[type]]"
             value="{{input::input}}"
             placeholder="[[placeholder]]"
-            required="[[required]]"
-            disabled="[[disabled]]"
+            required$="[[required]]"
+            disabled$="[[disabled]]"
             spellcheck="false"
             autocomplete="off">
         `;
