--- a/input-shared-style.html
+++ b/input-shared-style.html
@@ -25,6 +25,7 @@
          -moz-appearance: none;
          -webkit-appearance: none;
          appearance: none;
+         background: transparent;
          border: thin solid transparent;
        }
 
@@ -95,20 +96,20 @@
        #input:hover,
        #input:focus,
        input:focus,
-       input:hover,
-       button:focus,
-       button:hover {
+       input:hover {
+         color: var(--input-focus-color, inherit);
+         background-color: var(--input-focus-background, rgba(0,0,0,0.1));
          border-style: var(--input-focus-border-style, dotted);
          border-color: var(--input-focus-border-color, rgba(0,0,0,0.5));
          border-width: var(--input-border-width, thin);
-         color: var(--input-focus-color, inherit);
-         background-color: var(--input-focus-background, rgba(0,0,0,0.1));
          outline: none;
          @apply --input-focus;
        }
 
        select:focus,
-       select:hover {
+       select:hover,
+       button:focus,
+       button:hover {
          color: var(--inner-input-focus-color, inherit);
          background-color: var(--inner-input-focus-background, rgba(0,0,0,0.1));
          border-style: var(--inner-input-focus-border-style, dotted);
@@ -180,6 +181,44 @@
       }
 
       /**
+       * reset button
+       */
+       #input .reset {
+         display: inline-flex;
+         align-self: center;
+         margin: 0 0.1em;
+         cursor: pointer;
+         border-width: var(--inner-input-border-width, thin);
+         border-style: var(--inner-input-border-style, dotted);
+         border-color: var(--inner-input-border-color, transparent);
+         box-sizing: content-box;
+         opacity: 0.5;
+         color: inherit;
+         background-color: transparent;
+         transition: opacity 250ms cubic-bezier(0.6, 1, 0.2, 1);
+         height: 1em;
+         width: 1em;
+         border-radius: 50%;
+         padding: 0.15em;
+       }
+       #input .reset > svg {
+         height: 100%;
+         width: 100%;
+         fill: currentColor;
+       }
+       #input .reset:hover,
+       #input .reset:focus {
+         color: var(--inner-input-focus-color, inherit);
+         background-color: var(--inner-input-focus-background, rgba(0,0,0,0.1));
+         border-style: var(--inner-input-focus-border-style, dotted);
+         border-color: var(--inner-input-focus-border-color, transparent);
+         outline: none;
+       }
+       #input .reset:hover {
+         opacity: 1;
+       }
+
+      /**
        * placeholder
        */
       ::-webkit-input-placeholder,
@@ -245,6 +284,10 @@
       ::-webkit-clear-button {
         color: currentColor;
         cursor: pointer;
+      }
+      
+      [invisible] {
+        visibility: hidden;
       }
 
     </style>
