--- a/input-shared-style.html
+++ b/input-shared-style.html
@@ -126,8 +126,7 @@
       :host([invalid]:hover) #input,
       :host([invalid]:focus) #input,
       #input:invalid:hover,
-      #input:invalid:focus,
-      #input:invalid {
+      #input:invalid:focus {
         color: var(--input-invalid-color, inherit);
         background-color: var(--input-invalid-background, rgba(255,0,0,0.25));
         border-width: var(--input-border-width, thin);
@@ -285,7 +284,7 @@
         color: currentColor;
         cursor: pointer;
       }
-      
+
       [invisible] {
         visibility: hidden;
       }
