--- a/input-pattern.html
+++ b/input-pattern.html
@@ -36,6 +36,7 @@
             display: inline-flex;
             justify-content: center;
             box-sizing: content-box;
+            vertical-align: middle;
           }
           #minsize,
           #size {
