--- a/input-shared-style.html
+++ b/input-shared-style.html
@@ -3,6 +3,9 @@
 <dom-module id="input-shared-style">
   <template>
     <style>
+      :host {
+        vertical-align: middle;
+      }
       :host([hidden]),
       [hidden] {
         display: none !important;
