--- a/dropdown-style.html
+++ b/dropdown-style.html
@@ -1,4 +1,4 @@
-<link rel="import" href="../polymer/polymer.html">
+<script type="module" src="../../@polymer/polymer/polymer-legacy.js"></script>
 
 <!--
 `dropdown-style`
